<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.artillexstudios</groupId>
  <artifactId>AxRankMenu</artifactId>
  <version>1.1.0</version>
  <packaging>jar</packaging>

  <name>AxRankMenu</name>

  <properties>
    <java.version>1.8</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.4.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
                <relocations>
                    <relocation>
                        <pattern>com.artillexstudios.axapi</pattern>
                        <shadedPattern>com.artillexstudios.axrankmenu.libs.axapi</shadedPattern>
                    </relocation>
                    <relocation>
                        <pattern>org.bstats</pattern>
                        <shadedPattern>com.artillexstudios.axrankmenu.libs.bstats</shadedPattern>
                    </relocation>
                    <relocation>
                        <pattern>dev.triumphteam.gui</pattern>
                        <shadedPattern>com.artillexstudios.axrankmenu.libs.gui</shadedPattern>
                    </relocation>
                    <relocation>
                        <pattern>net.kyori.adventure</pattern>
                        <shadedPattern>com.artillexstudios.axrankmenu.libs.kyori</shadedPattern>
                    </relocation>
                </relocations>
              <createDependencyReducedPom>false</createDependencyReducedPom>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
  </build>

  <repositories>
      <repository>
          <id>Artillex-Studios</id>
          <url>https://repo.artillex-studios.com/releases/</url>
      </repository>
      <repository>
          <id>spigotmc-repo</id>
          <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
      </repository>
      <repository>
          <id>sonatype</id>
          <url>https://oss.sonatype.org/content/groups/public/</url>
      </repository>
      <repository>
          <id>codemc-repo</id>
          <url>https://repo.codemc.io/repository/maven-public/</url>
          <layout>default</layout>
      </repository>
      <repository>
          <id>jitpack.io</id>
          <url>https://jitpack.io</url>
      </repository>
      <repository>
          <id>rosewood-repo</id>
          <url>https://repo.rosewooddev.io/repository/public/</url>
      </repository>
      <repository>
          <id>placeholderapi</id>
          <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
      </repository>
  </repositories>

  <dependencies>
      <dependency>
          <groupId>org.spigotmc</groupId>
          <artifactId>spigot-api</artifactId>
          <version>1.13.2-R0.1-SNAPSHOT</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>com.artillexstudios.axapi</groupId>
          <artifactId>axapi</artifactId>
          <version>1.4.6</version>
          <scope>compile</scope>
      </dependency>
      <dependency>
          <groupId>dev.dejvokep</groupId>
          <artifactId>boosted-yaml</artifactId>
          <version>1.3</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>net.kyori</groupId>
          <artifactId>adventure-platform-bukkit</artifactId>
          <version>4.3.0</version>
          <scope>compile</scope>
      </dependency>
      <dependency>
          <groupId>net.kyori</groupId>
          <artifactId>adventure-text-minimessage</artifactId>
          <version>4.14.0</version>
          <scope>compile</scope>
      </dependency>
      <dependency>
          <groupId>net.kyori</groupId>
          <artifactId>adventure-text-serializer-legacy</artifactId>
          <version>4.14.0</version>
          <scope>compile</scope>
      </dependency>
      <dependency>
          <groupId>net.kyori</groupId>
          <artifactId>adventure-api</artifactId>
          <version>4.14.0</version>
          <scope>compile</scope>
      </dependency>
      <dependency>
          <groupId>org.bstats</groupId>
          <artifactId>bstats-bukkit</artifactId>
          <version>3.0.2</version>
          <scope>compile</scope>
      </dependency>
      <dependency>
          <groupId>dev.triumphteam</groupId>
          <artifactId>triumph-gui</artifactId>
          <version>3.1.6</version>
      </dependency>
      <dependency>
          <groupId>net.luckperms</groupId>
          <artifactId>api</artifactId>
          <version>5.4</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>su.nightexpress.coinsengine</groupId>
          <artifactId>CoinsEngine</artifactId>
          <version>2.0.7</version>
          <systemPath>${project.basedir}/libs/CoinsEngine-2.0.7.jar</systemPath>
          <scope>system</scope>
      </dependency>
      <dependency>
          <groupId>me.qKing12.RoyaleEconomy</groupId>
          <artifactId>RoyaleEconomy</artifactId>
          <version>1.4.4</version>
          <systemPath>${project.basedir}/libs/RoyaleEconomyAPI.jar</systemPath>
          <scope>system</scope>
      </dependency>
      <dependency>
          <groupId>com.github.MilkBowl</groupId>
          <artifactId>VaultAPI</artifactId>
          <version>1.7</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>org.black_ixx</groupId>
          <artifactId>playerpoints</artifactId>
          <version>3.2.6</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>me.clip</groupId>
          <artifactId>placeholderapi</artifactId>
          <version>2.11.3</version>
          <scope>provided</scope>
      </dependency>
  </dependencies>
</project>
